# option-pricer

./: CMakeLists.txt
examples/: payoff_demo.cpp
include/pricer/: black_scholes.hpp  black_scholes_greeks.hpp  greeks.hpp  market.hpp  math.hpp  option.hpp  payoff.hpp  types.hpp
src/: black_scholes.cpp  black_scholes_greeks.cpp  payoff.cpp
tests/: test_black_scholes.cpp  test_greeks.cpp  test_payoff.cpp
